# Facial-Recognition

./: CMakeLists.txt  README.md  imageDatabase.csv  main.cpp
